✨ feat: add GetTagsDayToDay presenter
