# main.go
@@ -112,6 +112,7 @@ func main() {
 		protected.GET("/expenses/total/monthly/year", presentersHandler.GetTotalExpensesMonthCurrentYear)
 		protected.GET("/expenses/tags/monthly/total", presentersHandler.GetCategoryTagsTotalsByMonthYear)
 		protected.GET("/expenses/day/day/period", presentersHandler.GetDayToDayExpensesPeriod)
+		protected.GET("/expenses/tags/day/day/", presentersHandler.GetTagsDayToDay)
 
 		protected.GET("/util/months/years", presentersHandler.GetAvailableMonthsYears)
 	}
